--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
+    "draft-js": "^0.11.7",
     "firebase": "^8.2.0",
     "next": "12.0.7",
     "prop-types": "^15.7.2",
+    "quill": "^2.0.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
