--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "prop-types": "^15.7.2",
     "quill": "^2.0.2",
     "react": "17.0.2",
+    "react-beforeunload": "^2.6.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
