--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.7.2",
     "quill": "^2.0.2",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-beforeunload": "^2.6.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
